--- a/templates/eventsource.yaml
+++ b/templates/eventsource.yaml
@@ -18,7 +18,7 @@ spec:
         - DELETE
       filter:
         afterStart: true
-        fields:
-          - key: metadata.name
-            operation: "=="
-            value: lingxiantest
+        # fields:
+        #   - key: metadata.name
+        #     operation: "=="
+        #     value: lingxiantest
