--- a/templates/workflow-template.yaml
+++ b/templates/workflow-template.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: WorkflowTemplate
 metadata:
   name: simple-wftmpl
-  namespace: default
+  namespace: {{ .Release.Namespace }}
 spec:
   workflowMetadata:
     labels: {}
